# mcp-langchain-gemini

./: README.md  main.py  pyproject.toml  requirements.txt
sqllit_setup/: sqlite_mcp_v2.py
